<resources>
    <string name="app_name">ESP32WiFiBLE</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="no_data">No data</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="update_config">Writing new configuration</string>
    <string name="erase_config">Erasing ESP32 configuration</string>
    <string name="error_credentials">WiFi credentials incomplete!</string>
    <string name="empty_response">"Empty response"</string>

    <!-- Button items -->
    <string name="write_button">Send WiFi config</string>
    <string name="read_button">Get WiFi config</string>
    <string name="reset_button">Erase WiFi config</string>
    <string name="sel_num_ap">Enable two AP</string>

    <!-- Text input -->
    <string name="ssid_prim">Primary AP</string>
    <string name="pw_prim">Primary Password</string>
    <string name="ssid_sec">Secondary AP</string>
    <string name="pw_sec">Secondary Password</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
