<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ButtonStyle, LabelFor">

    <LinearLayout
        android:id="@+id/button_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/readBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickRead"
            android:text="@string/read_button" />

        <Button
            android:id="@+id/writeBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickWrite"
            android:text="@string/write_button" />

        <Button
            android:id="@+id/resetBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickErase"
            android:text="@string/reset_button"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/data_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/pwPrim"
        android:text="@string/no_data" />

    <Switch
        android:id="@+id/apNumSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_ll"
        android:checked="false"
        android:onClick="onClickSwitch"
        android:text="@string/sel_num_ap" />

    <TextView
        android:id="@+id/ssidPrimHdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apNumSelector"
        android:layout_toStartOf="@+id/separator"
        android:text="@string/ssid_prim"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ssidPrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ssidPrimHdr"
        android:layout_toStartOf="@+id/separator"
        android:inputType="textPersonName"
        android:hint="@string/ssid_prim"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/pwPrimHdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ssidPrim"
        android:layout_toStartOf="@+id/separator"
        android:text="@string/pw_prim"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/pwPrim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pwPrimHdr"
        android:layout_toStartOf="@+id/separator"
        android:inputType="textPersonName"
        android:hint="@string/pw_sec"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/ssidSecHdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/apNumSelector"
        android:layout_toEndOf="@+id/separator"
        android:text="@string/ssid_sec"
        android:textSize="18sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/ssidSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ssidSecHdr"
        android:layout_toEndOf="@+id/separator"
        android:inputType="textPersonName"
        android:hint="@string/ssid_sec"
        tools:ignore="LabelFor"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/pwSecHdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ssidSec"
        android:layout_toEndOf="@+id/separator"
        android:text="@string/pw_sec"
        android:textSize="18sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/pwSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pwSecHdr"
        android:layout_toEndOf="@+id/separator"
        android:inputType="textPersonName"
        android:hint="@string/pw_sec"
        tools:ignore="LabelFor"
        android:visibility="invisible" />

</RelativeLayout>

                  